fix weird spacings

--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -27,12 +27,6 @@
   }
 }
 
-#content {
-  h1, h2, h3, h4, h5, h6 {
-    margin: 2em 0 0.5em;
-  }
-}
-
 @media(max-width: 576px) {
   .page-banner {
     height: 180px;
