--- a/assets/css/game-guide.scss
+++ b/assets/css/game-guide.scss
@@ -1,3 +1,14 @@
 ---
 ---
-@import "_game-guide.scss";
+#content {
+  h1, h2, h3, h4, h5, h6 {
+    margin: 1em 0 0.5em;
+  }
+}
+.game-guide-navigation{
+  background: #f3f3f3;
+  padding: 0.75em;
+  h4 {
+    margin-top: 0.5em !important;
+  }
+}
